Fixed backface-visibility for correct display in Firefox

--- a/src/scss/blocks/_forecast-daily.scss
+++ b/src/scss/blocks/_forecast-daily.scss
@@ -20,6 +20,7 @@
         position: absolute;
         width: calc(100% - 40px);
         height: calc(100% - 30px);
+        transform: rotateX(0deg);
         display: flex;
         flex-direction: column;
         justify-content: stretch;
